# RetCon

./: .gitignore  .gitmodules  LLKL_decription.txt  README.md  RetCon_streams_decription.md  RetCon_streams_decription.txt  troubleshooting.txt
exportator/: exportator.cbp  exportator.depend  main.cpp
program/: CMakeLists.txt  FatFs_driver.c  Makefile  RetCon.cbp  RetCon.depend  RetCon.layout  RetCon_config.h  build.sh  config.h.in  configure.sh  main.c  main.h  program.lll  upload.sh
program/Core/FatFs_lib/: CMakeLists.txt  diskio.c  ff.c  ff.h  mmc_avr.h  mmc_avr_spi.c  mmc_spi.c  mmc_spi.h  rtc.h
program/Core/KS0108_lib/: CMakeLists.txt  KS0108-AVR.c  README.md  font5x8.h  graphic.c  multi_buff.c  multi_buff.h
program/Core/LLKL_driver/: CMakeLists.txt  LLKL_RetCon.c  LLKL_RetCon.h  RC_streams.c  RC_streams.h  Troubleshooting
program/Core/LLL_driver/: CMakeLists.txt  LLL_RetCon.c  LLL_RetCon.h  RC_streams.c  RC_streams.h
program/Core/additional_graphics/: CMakeLists.txt  additional_graphics.c  additional_graphics.h
program/Core/system/: CMakeLists.txt  FatFs_driver.c  base.c  base.h  input.c  input.h
program/FatFs_lib/: diskio.c  diskio.h  ffconf.h  mmc_avr.h  mmc_avr_spi.c
program/KS0108_lib/: KS0108-AVR.c  KS0108.c  KS0108.h  multi_buff.c  multi_buff.h
program/LLKL/: CMakeLists.txt  LLKL.c  LLKL.h  LLKL_conf.h
program/LLKL/Compiler/: CMakeLists.txt  main.cpp
program/LLKL/LLKL_Examples/: LOG.TXT  log.txt  uno.l  uno.txt
program/LLKL/LLKL_referance_manual/: LLKL_decription.txt  LLKL_implemented.txt
program/LLKL_drv/: llkl_atmega1284p.c  llkl_atmega1284p.h  llkl_avr_drv.h
program/LLKL_tiny_lib/: LLKL_tiny.h  LLKL_tiny_conf.h
program/LLL/: CMakeLists.txt  LLL.c  LLL.h  LLL_conf.h
program/LLL/Compiler/: CMakeLists.txt  License.txt  main.cpp
program/LLL/LLL_Examples/: add.lll  addi.lll  sub.lll  subi.lll
program/LLL/LLL_referance_manual/: LLL_decription.txt  LLL_implemented.txt
program/Petit_FS_lib/: diskio.h  mmc.c  pff.c  pff.h
schemat_i_inne/: rrator.sh
schemat_i_inne/KLT/: README.md
schemat_i_inne/animacje/: README.md  condator.sh  exportator.sh  manima.sh  rrator.sh
schemat_i_inne/animacje/exported/: a.txt  b.txt
schemat_i_inne/animacje/frames/a/: a10.txt  a12.txt  a14.txt  a15.txt  a17.txt  a19.txt  a31.txt  a36.txt  a37.txt  a38.txt  a41.txt  a42.txt  a45.txt  a50.txt  a55.txt  a57.txt  a6.txt  a62.txt  a63.txt  a70.txt  a75.txt  a77.txt  a78.txt  a79.txt  a80.txt  a81.txt
schemat_i_inne/animacje/frames/b/: 20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-13.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-18.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-20.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-22.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-25.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-3.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-30.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-35.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-4.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-44.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-48.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-5.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-52.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-53.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-59.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-64.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-66.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-72.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-73.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-76.wbmp  20e8853a06474643d1f41789a0a00b6aHSyrRSrAtZbh2hXD-8.wbmp
schemat_i_inne/animacje/not_exported/: a.txt
schemat_i_inne/animacje/xcf/: a001.xcf
schemat_i_inne/bitmapy/: a001.xcf  ch1.wbmp  ch1.xcf  l.txt  menu.txt  pmenu0.xcf
schemat_i_inne/bitmapy/animacje/animacja startowa/: a.txt  ae.txt  b.txt  be.txt  condator.sh  exportator  exportator.sh  rrator.sh
schemat_i_inne/bitmapy/animacje/exportator/: exportator.layout
schemat_i_inne/exportator/: exportator.layout
schemat_i_inne/schemat/: RetCon.kicad_pcb  RetCon.kicad_prl  RetCon.kicad_pro  RetCon.kicad_sch
schemat_i_inne/schemat/Niebieski/: Holes.kicad_sym  USB_Micro-B_Amphenol_10104110_Horizontal.kicad_mod  fp-lib-table  schemat.kicad_pcb  schemat.kicad_prl  schemat.kicad_pro  schemat.kicad_sch  schemat.pro  schemat.sch  schemat_dip40-cache.lib  schemat_dip40-rescue.lib  schemat_dip40.kicad_pcb  schemat_dip40.pro  schemat_dip40.sch  sym-lib-table
schemat_i_inne/schemat/Niebieski/Holes.pretty/: One_hole.kicad_mod
schemat_i_inne/schemat/Niebieski/Niebieski.pretty/: WG12864BL.kicad_mod
schemat_i_inne/schemat/Niebieski/USB.pretty/: USBMicro-SMD.kicad_mod  microUSB.kicad_mod
schemat_i_inne/schemat/Niebieski/buttons.pretty/: Button_Switch.kicad_mod
schemat_i_inne/schemat/Zielony/: Wincom_WG12864D-SFYLY.sym  schemat_dip40-rescue.kicad_sym  schemat_dip40.kicad_prl  schemat_dip40.kicad_pro  sym-lib-table
schemat_i_inne/schemat/adapter/adapter/: adapter-cache.lib  adapter-rescue.kicad_sym  adapter.kicad_pcb  adapter.kicad_pro  adapter.kicad_sch  adapter.pro  adapter.sch  sym-lib-table
schemat_i_inne/schemat/dwuwarstwowe PCB/Niebieski/: #auto_saved_files#  SD.lib  SD_card_reader.sym  USBasp.lib  schemat-cache.lib  schemat.kicad_pcb  schemat.kicad_prl  schemat.kicad_pro  schemat.kicad_sch  schemat_dip40-cache.lib
schemat_i_inne/schemat/joystick/: joystick.kicad_sym
schemat_i_inne/schemat/konwerter/karta/: karta.pro  (+7 more)
schemat_i_inne/schemat_dip40/: schemat_dip40-cache.lib  schemat_dip40-rescue.lib  schemat_dip40.sch  sym-lib-table
schematic_and_others/animations/: README.md
schematic_and_others/schematic/: RetCon.kicad_pcb  RetCon.kicad_pro  RetCon.kicad_sch  fp-lib-table  sym-lib-table
schematic_and_others/schematic/Holes.pretty/: One_hole.kicad_mod
schematic_and_others/schematic/buttons.pretty/: Button_Switch.kicad_mod  button_onoff.kicad_mod
schematic_and_others/schematic/symbol_libraries/: RetCon.kicad_sym
(+61 files in other folders)
